generator - run and for