@@ -976,415 +976,421 @@ public class APITest {
 
     }
 
-    // -- run
+    @Nested
+    class RunTests {
 
-    @Test
-    public void shouldRunUnitAndReturnVoid() {
-        int[] i = { 0 };
-        Void nothing = run(() -> i[0]++);
-        assertThat(nothing).isNull();
-        assertThat(i[0]).isEqualTo(1);
+        @Test
+        public void shouldRunUnitAndReturnVoid() {
+            int[] i = { 0 };
+            Void nothing = run(() -> i[0]++);
+            assertThat(nothing).isNull();
+            assertThat(i[0]).isEqualTo(1);
+        }
+
     }
 
-    // -- For
+    @Nested
+    class ForTests {
 
-    @Test
-    public void shouldIterateFor1UsingSimpleYield() {
-        final List<Integer> list = List.of(1, 2, 3);
-        final List<Integer> actual = For(list).yield().toList();
-        assertThat(actual).isEqualTo(list);
-    }
+        @Test
+        public void shouldIterateFor1UsingSimpleYield() {
+            final List<Integer> list = List.of(1, 2, 3);
+            final List<Integer> actual = For(list).yield().toList();
+            assertThat(actual).isEqualTo(list);
+        }
 
-    @Test
-    public void shouldIterateForList1() {
-        final List<Integer> result = For(
-            List.of(1, 2, 3)
-        ).yield(i1 -> i1).toList();
-        assertThat(result.length()).isEqualTo((int) Math.pow(3, 1));
-        assertThat(result.head()).isEqualTo(1);
-        assertThat(result.last()).isEqualTo(3 * 1);
-    }
+        @Test
+        public void shouldIterateForList1() {
+            final List<Integer> result = For(
+                List.of(1, 2, 3)
+            ).yield(i1 -> i1).toList();
+            assertThat(result.length()).isEqualTo((int) Math.pow(3, 1));
+            assertThat(result.head()).isEqualTo(1);
+            assertThat(result.last()).isEqualTo(3 * 1);
+        }
 
-    @Test
-    public void shouldIterateForList2() {
-        final List<Integer> result = For(
-            List.of(1, 2, 3),
-            List.of(1, 2, 3)
-        ).yield((i1, i2) -> i1 + i2).toList();
-        assertThat(result.length()).isEqualTo((int) Math.pow(3, 2));
-        assertThat(result.head()).isEqualTo(2);
-        assertThat(result.last()).isEqualTo(3 * 2);
-    }
+        @Test
+        public void shouldIterateForList2() {
+            final List<Integer> result = For(
+                List.of(1, 2, 3),
+                List.of(1, 2, 3)
+            ).yield((i1, i2) -> i1 + i2).toList();
+            assertThat(result.length()).isEqualTo((int) Math.pow(3, 2));
+            assertThat(result.head()).isEqualTo(2);
+            assertThat(result.last()).isEqualTo(3 * 2);
+        }
 
-    @Test
-    public void shouldIterateForList3() {
-        final List<Integer> result = For(
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3)
-        ).yield((i1, i2, i3) -> i1 + i2 + i3).toList();
-        assertThat(result.length()).isEqualTo((int) Math.pow(3, 3));
-        assertThat(result.head()).isEqualTo(3);
-        assertThat(result.last()).isEqualTo(3 * 3);
-    }
+        @Test
+        public void shouldIterateForList3() {
+            final List<Integer> result = For(
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3)
+            ).yield((i1, i2, i3) -> i1 + i2 + i3).toList();
+            assertThat(result.length()).isEqualTo((int) Math.pow(3, 3));
+            assertThat(result.head()).isEqualTo(3);
+            assertThat(result.last()).isEqualTo(3 * 3);
+        }
 
-    @Test
-    public void shouldIterateForList4() {
-        final List<Integer> result = For(
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3)
-        ).yield((i1, i2, i3, i4) -> i1 + i2 + i3 + i4).toList();
-        assertThat(result.length()).isEqualTo((int) Math.pow(3, 4));
-        assertThat(result.head()).isEqualTo(4);
-        assertThat(result.last()).isEqualTo(3 * 4);
-    }
+        @Test
+        public void shouldIterateForList4() {
+            final List<Integer> result = For(
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3)
+            ).yield((i1, i2, i3, i4) -> i1 + i2 + i3 + i4).toList();
+            assertThat(result.length()).isEqualTo((int) Math.pow(3, 4));
+            assertThat(result.head()).isEqualTo(4);
+            assertThat(result.last()).isEqualTo(3 * 4);
+        }
 
-    @Test
-    public void shouldIterateForList5() {
-        final List<Integer> result = For(
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3)
-        ).yield((i1, i2, i3, i4, i5) -> i1 + i2 + i3 + i4 + i5).toList();
-        assertThat(result.length()).isEqualTo((int) Math.pow(3, 5));
-        assertThat(result.head()).isEqualTo(5);
-        assertThat(result.last()).isEqualTo(3 * 5);
-    }
+        @Test
+        public void shouldIterateForList5() {
+            final List<Integer> result = For(
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3)
+            ).yield((i1, i2, i3, i4, i5) -> i1 + i2 + i3 + i4 + i5).toList();
+            assertThat(result.length()).isEqualTo((int) Math.pow(3, 5));
+            assertThat(result.head()).isEqualTo(5);
+            assertThat(result.last()).isEqualTo(3 * 5);
+        }
 
-    @Test
-    public void shouldIterateForList6() {
-        final List<Integer> result = For(
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3)
-        ).yield((i1, i2, i3, i4, i5, i6) -> i1 + i2 + i3 + i4 + i5 + i6).toList();
-        assertThat(result.length()).isEqualTo((int) Math.pow(3, 6));
-        assertThat(result.head()).isEqualTo(6);
-        assertThat(result.last()).isEqualTo(3 * 6);
-    }
+        @Test
+        public void shouldIterateForList6() {
+            final List<Integer> result = For(
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3)
+            ).yield((i1, i2, i3, i4, i5, i6) -> i1 + i2 + i3 + i4 + i5 + i6).toList();
+            assertThat(result.length()).isEqualTo((int) Math.pow(3, 6));
+            assertThat(result.head()).isEqualTo(6);
+            assertThat(result.last()).isEqualTo(3 * 6);
+        }
 
-    @Test
-    public void shouldIterateForList7() {
-        final List<Integer> result = For(
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3)
-        ).yield((i1, i2, i3, i4, i5, i6, i7) -> i1 + i2 + i3 + i4 + i5 + i6 + i7).toList();
-        assertThat(result.length()).isEqualTo((int) Math.pow(3, 7));
-        assertThat(result.head()).isEqualTo(7);
-        assertThat(result.last()).isEqualTo(3 * 7);
-    }
+        @Test
+        public void shouldIterateForList7() {
+            final List<Integer> result = For(
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3)
+            ).yield((i1, i2, i3, i4, i5, i6, i7) -> i1 + i2 + i3 + i4 + i5 + i6 + i7).toList();
+            assertThat(result.length()).isEqualTo((int) Math.pow(3, 7));
+            assertThat(result.head()).isEqualTo(7);
+            assertThat(result.last()).isEqualTo(3 * 7);
+        }
 
-    @Test
-    public void shouldIterateForList8() {
-        final List<Integer> result = For(
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3),
-            List.of(1, 2, 3)
-        ).yield((i1, i2, i3, i4, i5, i6, i7, i8) -> i1 + i2 + i3 + i4 + i5 + i6 + i7 + i8).toList();
-        assertThat(result.length()).isEqualTo((int) Math.pow(3, 8));
-        assertThat(result.head()).isEqualTo(8);
-        assertThat(result.last()).isEqualTo(3 * 8);
-    }
+        @Test
+        public void shouldIterateForList8() {
+            final List<Integer> result = For(
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3),
+                List.of(1, 2, 3)
+            ).yield((i1, i2, i3, i4, i5, i6, i7, i8) -> i1 + i2 + i3 + i4 + i5 + i6 + i7 + i8).toList();
+            assertThat(result.length()).isEqualTo((int) Math.pow(3, 8));
+            assertThat(result.head()).isEqualTo(8);
+            assertThat(result.last()).isEqualTo(3 * 8);
+        }
 
-    @Test
-    public void shouldIterateForOption1() {
-        final Option<Integer> result = For(
-            Option.of(1)
-        ).yield(i1 -> i1);
-        assertThat(result.get()).isEqualTo(1);
-    }
+        @Test
+        public void shouldIterateForOption1() {
+            final Option<Integer> result = For(
+                Option.of(1)
+            ).yield(i1 -> i1);
+            assertThat(result.get()).isEqualTo(1);
+        }
 
-    @Test
-    public void shouldIterateForOption2() {
-        final Option<Integer> result = For(
-            Option.of(1),
-            Option.of(2)
-        ).yield((i1, i2) -> i1 + i2);
-        assertThat(result.get()).isEqualTo(3);
-    }
+        @Test
+        public void shouldIterateForOption2() {
+            final Option<Integer> result = For(
+                Option.of(1),
+                Option.of(2)
+            ).yield((i1, i2) -> i1 + i2);
+            assertThat(result.get()).isEqualTo(3);
+        }
 
-    @Test
-    public void shouldIterateForOption3() {
-        final Option<Integer> result = For(
-            Option.of(1),
-            Option.of(2),
-            Option.of(3)
-        ).yield((i1, i2, i3) -> i1 + i2 + i3);
-        assertThat(result.get()).isEqualTo(6);
-    }
+        @Test
+        public void shouldIterateForOption3() {
+            final Option<Integer> result = For(
+                Option.of(1),
+                Option.of(2),
+                Option.of(3)
+            ).yield((i1, i2, i3) -> i1 + i2 + i3);
+            assertThat(result.get()).isEqualTo(6);
+        }
 
-    @Test
-    public void shouldIterateForOption4() {
-        final Option<Integer> result = For(
-            Option.of(1),
-            Option.of(2),
-            Option.of(3),
-            Option.of(4)
-        ).yield((i1, i2, i3, i4) -> i1 + i2 + i3 + i4);
-        assertThat(result.get()).isEqualTo(10);
-    }
+        @Test
+        public void shouldIterateForOption4() {
+            final Option<Integer> result = For(
+                Option.of(1),
+                Option.of(2),
+                Option.of(3),
+                Option.of(4)
+            ).yield((i1, i2, i3, i4) -> i1 + i2 + i3 + i4);
+            assertThat(result.get()).isEqualTo(10);
+        }
 
-    @Test
-    public void shouldIterateForOption5() {
-        final Option<Integer> result = For(
-            Option.of(1),
-            Option.of(2),
-            Option.of(3),
-            Option.of(4),
-            Option.of(5)
-        ).yield((i1, i2, i3, i4, i5) -> i1 + i2 + i3 + i4 + i5);
-        assertThat(result.get()).isEqualTo(15);
-    }
+        @Test
+        public void shouldIterateForOption5() {
+            final Option<Integer> result = For(
+                Option.of(1),
+                Option.of(2),
+                Option.of(3),
+                Option.of(4),
+                Option.of(5)
+            ).yield((i1, i2, i3, i4, i5) -> i1 + i2 + i3 + i4 + i5);
+            assertThat(result.get()).isEqualTo(15);
+        }
 
-    @Test
-    public void shouldIterateForOption6() {
-        final Option<Integer> result = For(
-            Option.of(1),
-            Option.of(2),
-            Option.of(3),
-            Option.of(4),
-            Option.of(5),
-            Option.of(6)
-        ).yield((i1, i2, i3, i4, i5, i6) -> i1 + i2 + i3 + i4 + i5 + i6);
-        assertThat(result.get()).isEqualTo(21);
-    }
+        @Test
+        public void shouldIterateForOption6() {
+            final Option<Integer> result = For(
+                Option.of(1),
+                Option.of(2),
+                Option.of(3),
+                Option.of(4),
+                Option.of(5),
+                Option.of(6)
+            ).yield((i1, i2, i3, i4, i5, i6) -> i1 + i2 + i3 + i4 + i5 + i6);
+            assertThat(result.get()).isEqualTo(21);
+        }
 
-    @Test
-    public void shouldIterateForOption7() {
-        final Option<Integer> result = For(
-            Option.of(1),
-            Option.of(2),
-            Option.of(3),
-            Option.of(4),
-            Option.of(5),
-            Option.of(6),
-            Option.of(7)
-        ).yield((i1, i2, i3, i4, i5, i6, i7) -> i1 + i2 + i3 + i4 + i5 + i6 + i7);
-        assertThat(result.get()).isEqualTo(28);
-    }
+        @Test
+        public void shouldIterateForOption7() {
+            final Option<Integer> result = For(
+                Option.of(1),
+                Option.of(2),
+                Option.of(3),
+                Option.of(4),
+                Option.of(5),
+                Option.of(6),
+                Option.of(7)
+            ).yield((i1, i2, i3, i4, i5, i6, i7) -> i1 + i2 + i3 + i4 + i5 + i6 + i7);
+            assertThat(result.get()).isEqualTo(28);
+        }
 
-    @Test
-    public void shouldIterateForOption8() {
-        final Option<Integer> result = For(
-            Option.of(1),
-            Option.of(2),
-            Option.of(3),
-            Option.of(4),
-            Option.of(5),
-            Option.of(6),
-            Option.of(7),
-            Option.of(8)
-        ).yield((i1, i2, i3, i4, i5, i6, i7, i8) -> i1 + i2 + i3 + i4 + i5 + i6 + i7 + i8);
-        assertThat(result.get()).isEqualTo(36);
-    }
+        @Test
+        public void shouldIterateForOption8() {
+            final Option<Integer> result = For(
+                Option.of(1),
+                Option.of(2),
+                Option.of(3),
+                Option.of(4),
+                Option.of(5),
+                Option.of(6),
+                Option.of(7),
+                Option.of(8)
+            ).yield((i1, i2, i3, i4, i5, i6, i7, i8) -> i1 + i2 + i3 + i4 + i5 + i6 + i7 + i8);
+            assertThat(result.get()).isEqualTo(36);
+        }
 
-    @Test
-    public void shouldIterateForFuture1() {
-        final Future<Integer> result = For(
-            Future.of(() -> 1)
-        ).yield(i1 -> i1);
-        assertThat(result.get()).isEqualTo(1);
-    }
+        @Test
+        public void shouldIterateForFuture1() {
+            final Future<Integer> result = For(
+                Future.of(() -> 1)
+            ).yield(i1 -> i1);
+            assertThat(result.get()).isEqualTo(1);
+        }
 
-    @Test
-    public void shouldIterateForFuture2() {
-        final Future<Integer> result = For(
-            Future.of(() -> 1),
-            Future.of(() -> 2)
-        ).yield((i1, i2) -> i1 + i2);
-        assertThat(result.get()).isEqualTo(3);
-    }
+        @Test
+        public void shouldIterateForFuture2() {
+            final Future<Integer> result = For(
+                Future.of(() -> 1),
+                Future.of(() -> 2)
+            ).yield((i1, i2) -> i1 + i2);
+            assertThat(result.get()).isEqualTo(3);
+        }
 
-    @Test
-    public void shouldIterateForFuture3() {
-        final Future<Integer> result = For(
-            Future.of(() -> 1),
-            Future.of(() -> 2),
-            Future.of(() -> 3)
-        ).yield((i1, i2, i3) -> i1 + i2 + i3);
-        assertThat(result.get()).isEqualTo(6);
-    }
+        @Test
+        public void shouldIterateForFuture3() {
+            final Future<Integer> result = For(
+                Future.of(() -> 1),
+                Future.of(() -> 2),
+                Future.of(() -> 3)
+            ).yield((i1, i2, i3) -> i1 + i2 + i3);
+            assertThat(result.get()).isEqualTo(6);
+        }
 
-    @Test
-    public void shouldIterateForFuture4() {
-        final Future<Integer> result = For(
-            Future.of(() -> 1),
-            Future.of(() -> 2),
-            Future.of(() -> 3),
-            Future.of(() -> 4)
-        ).yield((i1, i2, i3, i4) -> i1 + i2 + i3 + i4);
-        assertThat(result.get()).isEqualTo(10);
-    }
+        @Test
+        public void shouldIterateForFuture4() {
+            final Future<Integer> result = For(
+                Future.of(() -> 1),
+                Future.of(() -> 2),
+                Future.of(() -> 3),
+                Future.of(() -> 4)
+            ).yield((i1, i2, i3, i4) -> i1 + i2 + i3 + i4);
+            assertThat(result.get()).isEqualTo(10);
+        }
 
-    @Test
-    public void shouldIterateForFuture5() {
-        final Future<Integer> result = For(
-            Future.of(() -> 1),
-            Future.of(() -> 2),
-            Future.of(() -> 3),
-            Future.of(() -> 4),
-            Future.of(() -> 5)
-        ).yield((i1, i2, i3, i4, i5) -> i1 + i2 + i3 + i4 + i5);
-        assertThat(result.get()).isEqualTo(15);
-    }
+        @Test
+        public void shouldIterateForFuture5() {
+            final Future<Integer> result = For(
+                Future.of(() -> 1),
+                Future.of(() -> 2),
+                Future.of(() -> 3),
+                Future.of(() -> 4),
+                Future.of(() -> 5)
+            ).yield((i1, i2, i3, i4, i5) -> i1 + i2 + i3 + i4 + i5);
+            assertThat(result.get()).isEqualTo(15);
+        }
 
-    @Test
-    public void shouldIterateForFuture6() {
-        final Future<Integer> result = For(
-            Future.of(() -> 1),
-            Future.of(() -> 2),
-            Future.of(() -> 3),
-            Future.of(() -> 4),
-            Future.of(() -> 5),
-            Future.of(() -> 6)
-        ).yield((i1, i2, i3, i4, i5, i6) -> i1 + i2 + i3 + i4 + i5 + i6);
-        assertThat(result.get()).isEqualTo(21);
-    }
+        @Test
+        public void shouldIterateForFuture6() {
+            final Future<Integer> result = For(
+                Future.of(() -> 1),
+                Future.of(() -> 2),
+                Future.of(() -> 3),
+                Future.of(() -> 4),
+                Future.of(() -> 5),
+                Future.of(() -> 6)
+            ).yield((i1, i2, i3, i4, i5, i6) -> i1 + i2 + i3 + i4 + i5 + i6);
+            assertThat(result.get()).isEqualTo(21);
+        }
 
-    @Test
-    public void shouldIterateForFuture7() {
-        final Future<Integer> result = For(
-            Future.of(() -> 1),
-            Future.of(() -> 2),
-            Future.of(() -> 3),
-            Future.of(() -> 4),
-            Future.of(() -> 5),
-            Future.of(() -> 6),
-            Future.of(() -> 7)
-        ).yield((i1, i2, i3, i4, i5, i6, i7) -> i1 + i2 + i3 + i4 + i5 + i6 + i7);
-        assertThat(result.get()).isEqualTo(28);
-    }
+        @Test
+        public void shouldIterateForFuture7() {
+            final Future<Integer> result = For(
+                Future.of(() -> 1),
+                Future.of(() -> 2),
+                Future.of(() -> 3),
+                Future.of(() -> 4),
+                Future.of(() -> 5),
+                Future.of(() -> 6),
+                Future.of(() -> 7)
+            ).yield((i1, i2, i3, i4, i5, i6, i7) -> i1 + i2 + i3 + i4 + i5 + i6 + i7);
+            assertThat(result.get()).isEqualTo(28);
+        }
 
-    @Test
-    public void shouldIterateForFuture8() {
-        final Future<Integer> result = For(
-            Future.of(() -> 1),
-            Future.of(() -> 2),
-            Future.of(() -> 3),
-            Future.of(() -> 4),
-            Future.of(() -> 5),
-            Future.of(() -> 6),
-            Future.of(() -> 7),
-            Future.of(() -> 8)
-        ).yield((i1, i2, i3, i4, i5, i6, i7, i8) -> i1 + i2 + i3 + i4 + i5 + i6 + i7 + i8);
-        assertThat(result.get()).isEqualTo(36);
-    }
+        @Test
+        public void shouldIterateForFuture8() {
+            final Future<Integer> result = For(
+                Future.of(() -> 1),
+                Future.of(() -> 2),
+                Future.of(() -> 3),
+                Future.of(() -> 4),
+                Future.of(() -> 5),
+                Future.of(() -> 6),
+                Future.of(() -> 7),
+                Future.of(() -> 8)
+            ).yield((i1, i2, i3, i4, i5, i6, i7, i8) -> i1 + i2 + i3 + i4 + i5 + i6 + i7 + i8);
+            assertThat(result.get()).isEqualTo(36);
+        }
 
-    @Test
-    public void shouldIterateForTry1() {
-        final Try<Integer> result = For(
-            Try.of(() -> 1)
-        ).yield(i1 -> i1);
-        assertThat(result.get()).isEqualTo(1);
-    }
+        @Test
+        public void shouldIterateForTry1() {
+            final Try<Integer> result = For(
+                Try.of(() -> 1)
+            ).yield(i1 -> i1);
+            assertThat(result.get()).isEqualTo(1);
+        }
 
-    @Test
-    public void shouldIterateForTry2() {
-        final Try<Integer> result = For(
-            Try.of(() -> 1),
-            Try.of(() -> 2)
-        ).yield((i1, i2) -> i1 + i2);
-        assertThat(result.get()).isEqualTo(3);
-    }
+        @Test
+        public void shouldIterateForTry2() {
+            final Try<Integer> result = For(
+                Try.of(() -> 1),
+                Try.of(() -> 2)
+            ).yield((i1, i2) -> i1 + i2);
+            assertThat(result.get()).isEqualTo(3);
+        }
 
-    @Test
-    public void shouldIterateForTry3() {
-        final Try<Integer> result = For(
-            Try.of(() -> 1),
-            Try.of(() -> 2),
-            Try.of(() -> 3)
-        ).yield((i1, i2, i3) -> i1 + i2 + i3);
-        assertThat(result.get()).isEqualTo(6);
-    }
+        @Test
+        public void shouldIterateForTry3() {
+            final Try<Integer> result = For(
+                Try.of(() -> 1),
+                Try.of(() -> 2),
+                Try.of(() -> 3)
+            ).yield((i1, i2, i3) -> i1 + i2 + i3);
+            assertThat(result.get()).isEqualTo(6);
+        }
 
-    @Test
-    public void shouldIterateForTry4() {
-        final Try<Integer> result = For(
-            Try.of(() -> 1),
-            Try.of(() -> 2),
-            Try.of(() -> 3),
-            Try.of(() -> 4)
-        ).yield((i1, i2, i3, i4) -> i1 + i2 + i3 + i4);
-        assertThat(result.get()).isEqualTo(10);
-    }
+        @Test
+        public void shouldIterateForTry4() {
+            final Try<Integer> result = For(
+                Try.of(() -> 1),
+                Try.of(() -> 2),
+                Try.of(() -> 3),
+                Try.of(() -> 4)
+            ).yield((i1, i2, i3, i4) -> i1 + i2 + i3 + i4);
+            assertThat(result.get()).isEqualTo(10);
+        }
 
-    @Test
-    public void shouldIterateForTry5() {
-        final Try<Integer> result = For(
-            Try.of(() -> 1),
-            Try.of(() -> 2),
-            Try.of(() -> 3),
-            Try.of(() -> 4),
-            Try.of(() -> 5)
-        ).yield((i1, i2, i3, i4, i5) -> i1 + i2 + i3 + i4 + i5);
-        assertThat(result.get()).isEqualTo(15);
-    }
+        @Test
+        public void shouldIterateForTry5() {
+            final Try<Integer> result = For(
+                Try.of(() -> 1),
+                Try.of(() -> 2),
+                Try.of(() -> 3),
+                Try.of(() -> 4),
+                Try.of(() -> 5)
+            ).yield((i1, i2, i3, i4, i5) -> i1 + i2 + i3 + i4 + i5);
+            assertThat(result.get()).isEqualTo(15);
+        }
 
-    @Test
-    public void shouldIterateForTry6() {
-        final Try<Integer> result = For(
-            Try.of(() -> 1),
-            Try.of(() -> 2),
-            Try.of(() -> 3),
-            Try.of(() -> 4),
-            Try.of(() -> 5),
-            Try.of(() -> 6)
-        ).yield((i1, i2, i3, i4, i5, i6) -> i1 + i2 + i3 + i4 + i5 + i6);
-        assertThat(result.get()).isEqualTo(21);
-    }
+        @Test
+        public void shouldIterateForTry6() {
+            final Try<Integer> result = For(
+                Try.of(() -> 1),
+                Try.of(() -> 2),
+                Try.of(() -> 3),
+                Try.of(() -> 4),
+                Try.of(() -> 5),
+                Try.of(() -> 6)
+            ).yield((i1, i2, i3, i4, i5, i6) -> i1 + i2 + i3 + i4 + i5 + i6);
+            assertThat(result.get()).isEqualTo(21);
+        }
 
-    @Test
-    public void shouldIterateForTry7() {
-        final Try<Integer> result = For(
-            Try.of(() -> 1),
-            Try.of(() -> 2),
-            Try.of(() -> 3),
-            Try.of(() -> 4),
-            Try.of(() -> 5),
-            Try.of(() -> 6),
-            Try.of(() -> 7)
-        ).yield((i1, i2, i3, i4, i5, i6, i7) -> i1 + i2 + i3 + i4 + i5 + i6 + i7);
-        assertThat(result.get()).isEqualTo(28);
-    }
+        @Test
+        public void shouldIterateForTry7() {
+            final Try<Integer> result = For(
+                Try.of(() -> 1),
+                Try.of(() -> 2),
+                Try.of(() -> 3),
+                Try.of(() -> 4),
+                Try.of(() -> 5),
+                Try.of(() -> 6),
+                Try.of(() -> 7)
+            ).yield((i1, i2, i3, i4, i5, i6, i7) -> i1 + i2 + i3 + i4 + i5 + i6 + i7);
+            assertThat(result.get()).isEqualTo(28);
+        }
 
-    @Test
-    public void shouldIterateForTry8() {
-        final Try<Integer> result = For(
-            Try.of(() -> 1),
-            Try.of(() -> 2),
-            Try.of(() -> 3),
-            Try.of(() -> 4),
-            Try.of(() -> 5),
-            Try.of(() -> 6),
-            Try.of(() -> 7),
-            Try.of(() -> 8)
-        ).yield((i1, i2, i3, i4, i5, i6, i7, i8) -> i1 + i2 + i3 + i4 + i5 + i6 + i7 + i8);
-        assertThat(result.get()).isEqualTo(36);
-    }
+        @Test
+        public void shouldIterateForTry8() {
+            final Try<Integer> result = For(
+                Try.of(() -> 1),
+                Try.of(() -> 2),
+                Try.of(() -> 3),
+                Try.of(() -> 4),
+                Try.of(() -> 5),
+                Try.of(() -> 6),
+                Try.of(() -> 7),
+                Try.of(() -> 8)
+            ).yield((i1, i2, i3, i4, i5, i6, i7, i8) -> i1 + i2 + i3 + i4 + i5 + i6 + i7 + i8);
+            assertThat(result.get()).isEqualTo(36);
+        }
 
-    @Test
-    public void shouldIterateNestedFor() {
-        final List<String> result =
-                For(Arrays.asList(1, 2), i ->
-                        For(List.of('a', 'b')).yield(c -> i + ":" + c)).toList();
-        assertThat(result).isEqualTo(List.of("1:a", "1:b", "2:a", "2:b"));
+        @Test
+        public void shouldIterateNestedFor() {
+            final List<String> result =
+                    For(Arrays.asList(1, 2), i ->
+                            For(List.of('a', 'b')).yield(c -> i + ":" + c)).toList();
+            assertThat(result).isEqualTo(List.of("1:a", "1:b", "2:a", "2:b"));
+        }
+
     }
 
     // -- Match
